#################
# Package setup #
#################

[metadata]
name = slad
version = attr: slad.version.__version__
description = Summary statistics learning and adaptive distances
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/yannikschaelte/study_abc_slad

# Author information
author = Yannik Schaelte
author_email = yannik.schaelte@gmail.com
maintainer = Yannik Schaelte
maintainer_email = yannik.schaelte@gmail.com

[options]
python_requires = >=3.6
setup_requires = setuptools
packages = find:
